--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "cd frontend/periospot-vite && npm run dev",
     "build": "cd frontend/periospot-vite && npm run build",
     "preview": "cd frontend/periospot-vite && npm run preview",
-    "lint": "cd frontend/periospot-vite && npm run lint"
+    "lint": "cd frontend/periospot-vite && npm run lint",
+    "validate:exports": "node scripts/validate-exports.js"
   },
   "keywords": [
     "periodontal",
